samples/_failures_safe/1761475110_72ae29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0210467.c: In function ‘main’:
./samples/SAFE/__tmp_b0210467.c:144:5: error: expected declaration or statement at end of input
  144 |     printf("\n");
      |     ^~~~~~
